Complete routes for ResourceRoom, Resources, ResourcePages, Menus (#12)
* complete Resource and ResourceRoom routes + rename GitHubFile to IsomerFile

* rename ResourceRoomInstance to IsomerResourceRoom

* complete routes: resourceRoom, resources, resourcePages, menus

* add resource-room openapi docs
